--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -1,5 +1,11 @@
-<h1>Pets#show</h1>
-<h1> <%=@pet.name%> <h1>
-
-
-<p>Find me in app/views/pets/show.html.erb</p>
+<h1>Your Pet <%=@pet.name%> </h1>
+<hr />
+<%= link_to  "Edit Pet Info", edit_pet_path(@pet) %>
+<br />
+<%= link_to  "Back To Pets", pets_path %>
+<h2>Pets Name</h2>
+<%=@pet.name%>
+<h2>Pet Type </h2>
+<%=@pet.animal%>
+<h2>Pet Color</h2>
+<%=@pet.color%>
